# lmorse

./: Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.status  configure  mymakefile  readme.txt
autom4te.cache/: output.0  traces.0  traces.1
doc/: lmorse.6  myleds.4
lmorse-1.0/: Makefile.am  configure.ac  readme.txt
lmorse-1.0/etc/: lmorse_translations
lmorse-1.0/module/: myleds.c  myleds.h
lmorse-1.0/src/: Makefile.am  arg_parsing.c  arg_parsing.h  driver_control.c  driver_control.h  led_morse.h  table.c  table.h  text_output.c
module/: .myleds.ko.cmd  .myleds.mod.o.cmd  .myleds.o.cmd  Makefile  modules.order  myleds.c  myleds.h  myleds.ko
module/.tmp_versions/: myleds.mod
myleds/: Makefile  myleds.c  myleds.h
src/: Makefile  Makefile.in  arg_parsing.c  arg_parsing.h  driver_control.c  driver_control.h  led_morse.c  led_morse.h  lmorse  table.c  table.h  text_output.c  text_output.h
src/.deps/: arg_parsing.Po  driver_control.Po  led_morse.Po  table.Po  text_output.Po
